Bug #19203 Different error reports for similar cases - unable to allocate memory
Submitted: 19 Apr 2006 21:00 Modified: 22 Dec 2006 4:27
Reporter: Serge Kozlov
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1 -> OS:Linux (Linux FC4)
Assigned to: Bugs System Target Version:

[19 Apr 2006 21:00] Serge Kozlov
Description:
The error descriptions can be different for same case - unable to allocate memory.
E.g. in first case set DataMemory = 100G, for second attempt set
MaxNoOfConcurrentOperations = 4294967039 . For both cases data node can't take a memory
but messages are different 

How to repeat:
1. Set DataMemory=100G and try start cluster. Save ndb_X_error.log. Its contents will
like that:

Time: Wednesday 19 April 2006 - 20:31:46
Status: Permanent error, external action needed
Message: Memory allocation failure, please decrease some configuration parameter
s (Configuration error)
Error: 2327
Error data: DBTUP could not allocate memory for Page
Error object: Requested: 32768x3276800 = 0 bytes
Program: /home/ndbdev/skozlov/builds/libexec/ndbd
Pid: 31319
Trace: /space/run/ndb_2_trace.log.1
Version: Version 5.1.10 (beta)

2. Set MaxNoOfConcurrentOperations = 4294967039 and try to start a cluster.  Save
ndb_X_error.log. Its contents will like that:

Time: Wednesday 19 April 2006 - 20:44:54
Status: Permanent error, external action needed
Message: Memory allocation failure, please decrease some configuration parameter
s (Configuration error)
Error: 2327
Error data: ArrayPool<T>::setSize malloc failed
Error object: ../../../../../storage/ndb/src/kernel/vm/ArrayPool.hpp line: 247 (
block: DBTUP)
Program: /home/ndbdev/skozlov/builds/libexec/ndbd
Pid: 1371
Trace: /space/run/ndb_2_trace.log.2
Version: Version 5.1.10 (beta)
***EOM***

3. Compare error logs.
[28 Aug 2006 11:08] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/10915

ChangeSet@1.2253, 2006-08-28 17:04:50+08:00, Justin.He@qa3-104.qa.cn.tlan +1 -0
  BUG #19203, Different error reports for similar cases - unable to allocate memory
[29 Aug 2006 4:33] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/10968

ChangeSet@1.2253, 2006-08-29 10:30:38+08:00, Justin.He@qa3-104.qa.cn.tlan +1 -0
  BUG #19203, Different error reports for similar cases - unable to allocate memory
[13 Nov 2006 8:40] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/15201

ChangeSet@1.2320, 2006-11-13 15:31:59+08:00, Justin.He@dev3-47.dev.cn.tlan +5 -0
  Bug#19203, Different error reports for similar cases - unable allocate memory
[22 Dec 2006 4:27] Jon Stephens
Thank you for your bug report. This issue has already been fixed in the latest released
version of that product, which you can download at

  http://www.mysql.com/downloads/

Documented bugfix in 5.1.14 changelog.