Bug#19203, Different error reports for similar cases - unable allocate memory